--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="vendor/css/re-com.css">
     <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300" rel="stylesheet" type="text/css">
-    
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/handsontable/0.34.5/handsontable.full.min.css" rel="stylesheet" type="text/css">
     <link href="css/site.css" rel="stylesheet" type="text/css">
   </head>
   <body>
